Pakketten + JSON File

--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
 <body>
 
     <nav style="background: #1b4332;">
-        <div class="logo">🛠️ Admin Dashboard</div>
+        <div class="logo">Admin Dashboard</div>
         <ul>
             <li><a href="index.html">Terug naar Website</a></li>
         </ul>
@@ -29,7 +29,7 @@
         <div class="dashboard-grid">
             
             <div class="card" style="grid-column: span 2;">
-                <h3>📅 Planning & Orders</h3>
+                <h3>Planning & Orders</h3>
                 <p>Overzicht van aanvragen en ingeplande klussen.</p>
                 <table>
                     <thead>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="card">
-                <h3>➕ Nieuw Pakket Toevoegen</h3>
+                <h3>Nieuw Pakket Toevoegen</h3>
                 <form id="adminPakketForm">
                     <input type="text" id="pakketTitel" placeholder="Naam pakket (bv. Winterklaar)" required>
                     <input type="text" id="pakketPrijs" placeholder="Prijs (bv. €50/uur)" required>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="card">
-                <h3>📊 Status</h3>
+                <h3>Status</h3>
                 <p>Aantal openstaande orders: <strong id="orderCount">0</strong></p>
                 <p>Systeem status: <strong>Online</strong></p>
             </div>
