Custom offerte button + pagina / rates.json toegevoegd

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav>
         <div class="logo">De Groene Tuinman</div>
         <ul>
-            <li><a href="#pakketten">Pakketten</a></li> <li><a href="#bestelformulier">Bestelformulier</a></li>
+            <li><a href="#pakketten">Pakketten</a></li>
+            <li><a href="#bestelformulier">Bestelformulier</a></li>
             <li><a href="admin.html" style="color: orange;">(Admin Login)</a></li>
         </ul>
     </nav>
@@ -28,6 +29,14 @@
         <h2>Onze Standaard Pakketten</h2>
         <div class="pakket-grid" id="pakket-container">
             </div>
+        
+        <div class="custom-offerte-wrapper">
+            <h3>Heeft u iets anders nodig?</h3>
+            <a href="custom_offerte.html" class="btn-secondary" style="text-decoration: none; display: inline-block;">
+                Custom Offerte Aanvragen
+            </a>
+        </div>
+        
     </section>
 
     <section id="bestelformulier">
