--- a/html/admin.html
+++ b/html/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard - Tuinman</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <style>
         body { background-color: #f4f4f4; color: #333; }
         .admin-container { max-width: 1000px; margin: 2rem auto; padding: 1rem; }
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <script src="functions.js"></script>
+    <script src="js/functions.js"></script>
     <script>
         // Specifieke init voor admin pagina (start de laadfuncties)
         document.addEventListener('DOMContentLoaded', () => {
