--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Groene Tuinman - Bestelformulier</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#pakketten">Pakketten</a></li>
             <li><a href="#bestelformulier">Bestelformulier</a></li>
-            <li><a href="admin.html" style="color: orange;">(Admin Login)</a></li>
+            <li><a href="html/admin.html" style="color: orange;">(Admin Login)</a></li>
         </ul>
     </nav>
 
@@ -32,7 +32,7 @@
         
         <div class="custom-offerte-wrapper">
             <h3>Heeft u iets anders nodig?</h3>
-            <a href="custom_offerte.html" class="btn-secondary" style="text-decoration: none; display: inline-block;">
+            <a href="html/custom_offerte.html" class="btn-secondary" style="text-decoration: none; display: inline-block;">
                 Custom Offerte Aanvragen
             </a>
         </div>
@@ -74,6 +74,6 @@
         </div>
     </section>
 
-    <script src="functions.js"></script>
+    <script src="js/functions.js"></script>
 </body>
 </html>
