Overzicht Bestellingen + Live prijs indicatie van custom offerte

--- a/html/admin.html
+++ b/html/admin.html
@@ -66,7 +66,8 @@
         </div>
     </div>
 
-    <script src="js/functions.js"></script>
+    <script src="../js/functions.js"></script>
+
     <script>
         // Specifieke init voor admin pagina (start de laadfuncties)
         document.addEventListener('DOMContentLoaded', () => {
